2011-12-01  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc (attiny4313): New entry.

2011-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtagio.cc (jtag1::initJtagOnChipDebugging): Drop the
	attempt to clear the lock bits; it's useless anyway, as the
	lockbits can only be cleared by a chip erase.
	* src/jtag2io.cc (jtag2::initJtagOnChipDebugging): (Dito.)

2011-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc (atxmega256a3): New entry.

2011-11-30  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h (xmega_device_desc_type): eeprom_page_size is
	only one byte
	* src/devdescr.cc (atxmega128a1, atxmega128a1revd): (Dito.)

2011-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2.h: Introduce jtag2:xmegaSendBPs().
	* src/jtag2bp.cc: Move out the CMND_SET_BREAK_XMEGA into
	jtag2:xmegaSendBPs(), as this needs to be issued in front
	of any single-step or run command.
	* src/jtag2run.cc: Call jtag2:xmegaSendBPs() where
	necessary.

2011-11-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Contributed by Detlev Kraft:
	* doc/avr-studio-5-detlev-kraft.pdf: New file, added with
	Detlev's kind permission.  (Sorry, German language only.)

2011-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2.h: Implement a "cached PC" to avoid re-requesting
	the PC value from the ICE over and over again.
	* src/jtag2run.cc: Cache the PC value obtained from the ICE.
	For actions that are expecting a BREAK event, catch the
	expected event immediately, and use the PC value obtained
	from that event.  Fork out jtag2::expectEvent() into a method
	of its own to centralize the code for it (this logic used to
	live inside jtag2::eventLoop() before).

2011-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2io.cc (jtag2::doJtagCommand): Slightly improve the
	change from rev 240: don't attempt to retry definitively
	rejected commands; do not attempt to perform USB endpoint
	resets when the communication went fine but the result was