@@ -790,7 +790,7 @@ class jtag
       Note: the gdb 'continue' command is handled by jtagContinue,
       this is just the low level command to resume after interruptProgram
   **/
-  virtual bool resumeProgram(void) = 0;
+  virtual bool resumeProgram(bool restoreTarget = false) = 0;
 
   /** Issue a "single step" command to the JTAG box. 
       Return true iff successful **/
