@@ -111,7 +111,7 @@ class jtag1: public jtag
     virtual bool setProgramCounter(unsigned long pc);
     virtual bool resetProgram(bool possible_nSRST);
     virtual bool interruptProgram(void);
-    virtual bool resumeProgram(void);
+    virtual bool resumeProgram(bool restoreTarget);
     virtual bool jtagSingleStep(bool useHLL = false);
     virtual bool jtagContinue(void);
 
